--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -6,20 +6,27 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5l7 7-7 7M5 5l7 7-7 7" />
         </svg>
     </button>
-    <a href="#" class="block p-2 font-bold text-2md">
-        UserName
+    {% if session.username %}
+    <a href="/" class="block p-2 font-bold text-2md">
+        {{ session.username }}
     </a>
+    {% else %}
+    <a href="/login" class="block p-2 font-bold text-2md">
+        Login
+    </a>
+    {% endif %}
 </div>
 <!-- sidebar -->
 <nav id="sidebar" class="w-48 bg-purple-800 text-purple-100 absolute inset-y-0 left-0
                                        transform -translate-x-full transition duration-200
                                        ease-in-out md:relative md:translate-x-0">
     <div class="space-y-6 text-lg py-24">
+        {% if session.user_id %}
         <ul>
             <a href="#" class="">
                 <li class="py-2 font-bold text-xl hover:bg-purple-600
                                           transition duration-200 px-4">
-                    UserName
+                    {{ session.username }}
                 </li>
             </a>
         </ul>
@@ -45,5 +52,13 @@
                 </li>
             </a>
         </ul>
+        {% else %}
+        <ul>
+            <li class="py-w font-bold text-xl hover:bg-purple-600 transition
+                duration-200 px-4">
+                <a href="/login">Login</a>
+            </li>
+        </ul>
+        {% endif %}
     </div>
 </nav>
