--- a/templates/payments.html
+++ b/templates/payments.html
@@ -12,30 +12,47 @@
     <div class="card container mx-auto bg-purple-200 w-11/12 mt-6 md:mt-10">
         <div class="">
             <div class="flex justify-between">
-                <h2 class="font-bold text-lg">Registry Of Payments</h2>
+                <h2 class="font-bold text-lg">Registry Of Payments (↓Date)</h2>
                 <button class="submit-btn"><a href="/payments">New Payment</a></button>
             </div>
             <table class="w-full mt-4">
                 <thead class="bg-purple-800 text-purple-100">
                     <tr class="">
-                        <!-- TODO: add jinja2 syntax to add header in headers. -->
-                        <th class="border border-purple-700 p-2">Seller</th>
-                        <th class="border border-purple-700 p-2">#P</th>
-                        <th class="border border-purple-700 p-2">Amount</th>
-                        <th class="border border-purple-700 p-2">Price</th>
-                        <th class="border border-purple-700 p-2">Date</th>
+                        <th class="border border-purple-700 p-2">
+                            Item
+                        </th>
+                        <th class="border border-purple-700 p-2">
+                            Seller
+                        </th>
+                        <th class="border border-purple-700 p-2">
+                            Price
+                        </th>
+                        {% for header in headers %}
+                        <th class="border border-purple-700 p-2">
+                            {{ header | title }}
+                        </th>
+                        {% endfor %}
                     </tr>
                 </thead>
                 <tbody>
+                    {% for payment in payments %}
                     <tr>
-                        <!-- TODO: add jinja2 syntax to add data in dictionary
-                            sorted by date. -->
-                        <td class="border border-purple-700 bg-white p-2">1</td>
-                        <td class="border border-purple-700 bg-white p-2">2</td>
-                        <td class="border border-purple-700 bg-white p-2">3</td>
-                        <td class="border border-purple-700 bg-white p-2">4</td>
-                        <td class="border border-purple-700 bg-white p-2">5</td>
+                        <td class="border border-purple-700 bg-white p-2">
+                            {{ payment.purchase.item | formatter }}
+                        </td>
+                        <td class="border border-purple-700 bg-white p-2">
+                            {{ payment.purchase.seller | formatter }}
+                        </td>
+                        <td class="border border-purple-700 bg-white p-2">
+                            {{ payment.purchase.price | formatter }}
+                        </td>
+                        {% for header in headers %}
+                        <td class="border border-purple-700 bg-white p-2">
+                            {{ payment[header] | formatter }}
+                        </td>
+                        {% endfor %}
                     </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
