--- a/templates/payments.html
+++ b/templates/payments.html
@@ -13,7 +13,7 @@
         <div class="">
             <div class="flex justify-between">
                 <h2 class="font-bold text-lg">Registry Of Payments (↓Date)</h2>
-                <button class="submit-btn"><a href="/payments">New Payment</a></button>
+                <button class="submit-btn"><a href="/payment">New Payment</a></button>
             </div>
             <table class="w-full mt-4">
                 <thead class="bg-purple-800 text-purple-100">
