--- a/static/style.css
+++ b/static/style.css
@@ -542,8 +542,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: grid;
 }
 
-.h-20 {
-  height: 5rem;
+.h-40 {
+  height: 10rem;
 }
 
 .h-screen {
@@ -570,12 +570,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 83.333333%;
 }
 
-.w-3\/4 {
-  width: 75%;
+.w-min {
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
 }
 
-.w-20 {
-  width: 5rem;
+.w-40 {
+  width: 10rem;
 }
 
 .w-4\/5 {
@@ -688,15 +690,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.border {
-  border-width: 1px;
-}
-
-.border-purple-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(126 34 206 / var(--tw-border-opacity));
 }
 
 .bg-purple-300 {
@@ -908,16 +901,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     display: none;
   }
 
-  .md\:h-40 {
-    height: 10rem;
+  .md\:h-56 {
+    height: 14rem;
   }
 
   .md\:w-1\/2 {
     width: 50%;
   }
 
-  .md\:w-40 {
-    width: 10rem;
+  .md\:w-56 {
+    width: 14rem;
   }
 
   .md\:w-1\/3 {
