--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,44 @@
 {% endblock %}
 
 {% block title %}
-    Hello, World!
+    Welcome!
 {% endblock %}
 
 {% block main %}
-    Hello, World!
+    <div class="card flex flex-col mx-auto mt-12 w-min bg-purple-200 justify-center items-center">
+        <div class="">
+            {% if profile.avatar_url %}
+            <img src="{{ avatar_url }}" alt="user avatar" class="rounded
+                                                          rounded-full">
+            {% else %}
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-40 w-40 md:h-56 md:w-56"
+                viewBox="0 0 20 20" fill="currentColor">
+  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd" />
+</svg>
+            {% endif %}
+            <h2 class="font-bold text-xl text-center">
+                {{ session.username }}
+            </h2>
+        </div>
+        <div class="mt-12">
+            <table class="table">
+                <thead>
+                    <tr>
+                        {% for header in headers %}
+                        <th>{{ header | title }}</th>
+                        {% endfor %}
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        {% for header in headers %}
+                        <td {% if header == "total" %}class="font-bold"{% endif %}>
+                            {{ profile[header] | formatter }}
+                        </td>
+                        {% endfor %}
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endblock %}
