--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -22,8 +22,19 @@
                                        ease-in-out md:relative md:translate-x-0">
     <div class="space-y-6 text-lg py-24">
         {% if session.user_id %}
-        <ul>
-            <a href="/" class="">
+        <ul class="">
+            {% if session.avatar_url %}
+            <img src="{{ session.avatar_url }}" alt="user avatar" class="rounded
+                                                                  rounded-full
+                                                                  w-4/6 mb-2
+                                                                  mx-auto">
+            {% else %}
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-4/6 mb-2 mx-auto"
+                viewBox="0 0 20 20" fill="currentColor">
+  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd" />
+</svg>
+            {% endif %}
+            <a href="/" class="text-center">
                 <li class="py-2 font-bold text-xl hover:bg-purple-600
                                           transition duration-200 px-4">
                     {{ session.username }}
